deploy-webapp.yml
##############################################################################
# Copyright 2019 IBM Corp. All Rights Reserved.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
##############################################################################
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: webapp-deployment
        version: v1
    spec:
      containers:
        - name: webapp
          image: maxshapiro32/examplehealthanalyticsweb
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 32001
      name: http
  type: NodePort
  selector:
    name: webapp-deployment
