ingress-webapp.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
  name: ingress-webapp
spec:
  tls:
    - hosts:
        - <INGRESS_SUBDOMAIN>
      secretName: <INGRESS_SECRET>
  backend:
    serviceName: webapp-service
    servicePort: 4000
  rules:
    - host: <INGRESS_SUBDOMAIN>
      http:
        paths:
          - path: /
            backend:
              serviceName: webapp-service
              servicePort: 4000
